fixed imports in mobile.scss to mixins and fixed trans box behind text

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,6 +1,6 @@
 // Widescreens
 
-@include mediaXL {
+@mixin mediaXL {
   .projects {
     grid-template-columns: repeat(3, 1fr)
   }
@@ -8,14 +8,14 @@
 
 // desktops & Laptops
 
-@include mediaLg {
+@mixin mediaLg {
   .projects {
     grid-template-columns: repeat(3, 1fr)
   }
 }
 // tablets & small Laptops
 
-@include mediaMd {
+@mixin mediaMd {
   main {
     align-items: center;
     text-align: center;
@@ -75,7 +75,7 @@
 }
 // smartphones
 
-@include mediaSm {
+@mixin mediaSm {
   main#home h1 {
     margin-top: 10vh;
   }
